--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,45 @@
 version: '3'
 services:
    Node1:
-    image: p2ptest:1
+    image: p2ptest:2
     ports:
       - "8080:8080"
     entrypoint: ./go 127.0.0.1 Daniel :8080
    Node2:
-    image: p2ptest:1
+    image: p2ptest:2
     links: 
     - Node1
     ports:
       - "8081:8080"
     entrypoint: ./go Node1 Helge :8081
    Node3:
-    image: p2ptest:1
+    image: p2ptest:2
     links: 
     - Node1
     ports:
       - "8082:8080"
     entrypoint: ./go Node1 Kristian :8082
+   Node4:
+    image: p2ptest:2
+    links: 
+    - Node1
+    ports:
+      - "8083:8080"
+    entrypoint: ./go Node1 Emmely :8083
+   Node4:
+    image: p2ptest:2
+    links: 
+    - Node1
+    ports:
+      - "8084:8080"
+    entrypoint: ./go Node1 Tine :8084
+   Node5:
+    image: p2ptest:2
+    links: 
+    - Node1
+    ports:
+      - "8085:8080"
+    entrypoint: ./go Node1 Jens :8085
        
 
     
