--- a/PeerToPeer/Dockerfile
+++ b/PeerToPeer/Dockerfile
@@ -26,12 +26,10 @@ COPY PeersControlCenter.go PeersControlCenter.go
 COPY Router.go Router.go
 COPY Routes.go Routes.go
 COPY QueueHQ.go QueueHQ.go
+COPY Prom.go Prom.go
 
 
 EXPOSE 8080
-EXPOSE 8081
-EXPOSE 8082
-EXPOSE 8083
-EXPOSE 8084
+
 
 RUN go build
