Added One-line script

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,5 +79,14 @@ services:
       - Prom
     ports:
       - "3000:3000"
-
+   Sim:
+    image: blsim:latest
+    links: 
+    - Node1
+    - Node2
+    - Node3
+    - Node4
+    - Node5
+    - Node6
+    - Node7
     
